Names in capital letters. UTF-8 encoding for website.

--- a/website/download.html
+++ b/website/download.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8" />
 		<title>TCP - The Camellia Project</title>
 		<link rel="stylesheet" media="all" type="text/css" href="/css/style.css" />
 	</head>
@@ -10,9 +11,9 @@
 			<nav>
 				<ul>
 					<li><a href="/index.html">Accueil</a></li>
-					<li class="current"><a href="/download.html">Téléchargement</a></li>
+					<li class="current"><a href="/download.html">TÃ©lÃ©chargement</a></li>
 					<li><a href="/install.html">Installation</a></li>
-					<li class="last"><a href="/team.html">L'équipe</a></li>
+					<li class="last"><a href="/team.html">L'Ã©quipe</a></li>
 				</ul>
 			</nav>
 			<div class="clear"></div>
@@ -28,6 +29,6 @@
 				</article>
 			</section>
 		</div>
-		<footer>The Camellia Project est distribué sous license Apache 2.0</footer>
+		<footer>The Camellia Project est distribuÃ© sous license Apache 2.0</footer>
 	</body>
 </html>
