--- a/website/team.html
+++ b/website/team.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8" />
 		<title>TCP - The Camellia Project</title>
 		<link rel="stylesheet" media="all" type="text/css" href="/css/style.css" />
 	</head>
@@ -10,9 +11,9 @@
 			<nav>
 				<ul>
 					<li><a href="/index.html">Accueil</a></li>
-					<li><a href="/download.html">Téléchargement</a></li>
+					<li><a href="/download.html">TÃ©lÃ©chargement</a></li>
 					<li><a href="/install.html">Installation</a></li>
-					<li class="last current"><a href="/team.html">L'équipe</a></li>
+					<li class="last current"><a href="/team.html">L'Ã©quipe</a></li>
 				</ul>
 			</nav>
 			<div class="clear"></div>
@@ -22,7 +23,7 @@
 						<tr>
 							<td><img class="avatar" alt="" src="/avatars/1.png" /></td>
 							<td>
-								<span class="member">Faure Nicolas (Spark)</span><br/>
+								<span class="member"><span class="name">Faure</span> Nicolas (Spark)</span><br/>
 								<span class="rank">Dieu</span><br/>
 								Responsable de la rotation de l'image.
 							</td>
@@ -30,31 +31,31 @@
 						<tr>
 							<td><img class="avatar" alt="" src="/avatars/2.png" /></td>
 							<td>
-								<span class="member">Polsinelli Max (babiboubu)</span><br/>
+								<span class="member"><span class="name">Polsinelli</span> Max (babiboubu)</span><br/>
 								<span class="rank">Pedobear</span><br/>
-								Co-responsable de la détection de texte.
+								Co-responsable de la dÃ©tection de texte.
 							</td>
 						</tr>
 						<tr>
 							<td><img class="avatar" alt="" src="/avatars/3.png" /></td>
 							<td>
-								<span class="member">Sébastien Trouve (judaS-Theos)</span><br/>
-								<span class="rank">Traître</span><br/>
-								Responsable du prétraitement.
+								<span class="member"><span class="name">Trouve</span> SÃ©bastien (judaS-Theos)</span><br/>
+								<span class="rank">TraÃ®tre</span><br/>
+								Responsable du prÃ©traitement.
 							</td>
 						</tr>
 						<tr>
 							<td><img class="avatar" alt="" src="/avatars/4.png" /></td>
 							<td>
-								<span class="member">Urion Alexandre (Noxenn)</span><br/>
+								<span class="member"><span class="name">Urion</span> Alexandre (Noxenn)</span><br/>
 								<span class="rank">Larbin</span><br/>
-								Co-responsable de la détection de texte.
+								Co-responsable de la dÃ©tection de texte.
 							</td>
 						</tr>
 					</table>
 				</article>
 			</section>
 		</div>
-		<footer>The Camellia Project est distribué sous license Apache 2.0</footer>
+		<footer>The Camellia Project est distribuÃ© sous license Apache 2.0</footer>
 	</body>
 </html>
