--- a/website/team.html
+++ b/website/team.html
@@ -23,32 +23,32 @@
 						<tr>
 							<td><img class="avatar" alt="" src="/avatars/1.png" /></td>
 							<td>
-								<span class="member"><span class="name">Faure</span> Nicolas (Spark)</span><br/>
-								<span class="rank">Dieu</span><br/>
+								<span class="member"><span class="name">Faure</span> Nicolas</span><br/>
+								<span class="rank">Spark/span><br/>
 								Responsable de la rotation de l'image.
 							</td>
 						</tr>
 						<tr>
 							<td><img class="avatar" alt="" src="/avatars/2.png" /></td>
 							<td>
-								<span class="member"><span class="name">Polsinelli</span> Max (babiboubu)</span><br/>
-								<span class="rank">Pedobear</span><br/>
+								<span class="member"><span class="name">Polsinelli</span> Max</span><br/>
+								<span class="rank">Eessaez</span><br/>
 								Co-responsable de la détection de texte.
 							</td>
 						</tr>
 						<tr>
 							<td><img class="avatar" alt="" src="/avatars/3.png" /></td>
 							<td>
-								<span class="member"><span class="name">Trouve</span> Sébastien (judaS-Theos)</span><br/>
-								<span class="rank">Traître</span><br/>
+								<span class="member"><span class="name">Trouve</span> Sébastien</span><br/>
+								<span class="rank">judaS-Theos</span><br/>
 								Responsable du prétraitement.
 							</td>
 						</tr>
 						<tr>
 							<td><img class="avatar" alt="" src="/avatars/4.png" /></td>
 							<td>
-								<span class="member"><span class="name">Urion</span> Alexandre (Noxenn)</span><br/>
-								<span class="rank">Larbin</span><br/>
+								<span class="member"><span class="name">Urion</span> Alexandre</span><br/>
+								<span class="rank">Noxenn</span><br/>
 								Co-responsable de la détection de texte.
 							</td>
 						</tr>
