--- a/website/team.html
+++ b/website/team.html
@@ -24,7 +24,7 @@
 							<td><img class="avatar" alt="" src="/avatars/1.png" /></td>
 							<td>
 								<span class="member"><span class="name">Faure</span> Nicolas</span><br/>
-								<span class="rank">Spark/span><br/>
+								<span class="rank">Spark</span><br/>
 								Responsable de la rotation de l'image.
 							</td>
 						</tr>
