--- a/website/error404.html
+++ b/website/error404.html
@@ -12,7 +12,7 @@
 				<nav>
 					<ul>
 						<li><a href="/index.html">Accueil</a></li>
-						<li class="current"><a href="/download.html">Téléchargement</a></li>
+						<li><a href="/download.html">Téléchargement</a></li>
 						<li><a href="/install.html">Installation</a></li>
 						<li class="last"><a href="/team.html">L'équipe</a></li>
 					</ul>
@@ -22,7 +22,7 @@
 			<section>
 				<article>
 					<p>
-						<a href="/downloads/faure_n-ocr-s1s1.tar.bz2" class="download">Soutenance 1</a>
+						Fichier non trouvé.
 					</p>
 				</article>
 			</section>
