--- a/website/team.html
+++ b/website/team.html
@@ -7,16 +7,18 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<header><a href="index.html"><img src="/img/logo.png" alt="" id="logo" /></a></header>
-			<nav>
-				<ul>
-					<li><a href="/index.html">Accueil</a></li>
-					<li><a href="/download.html">Téléchargement</a></li>
-					<li><a href="/install.html">Installation</a></li>
-					<li class="last current"><a href="/team.html">L'équipe</a></li>
-				</ul>
-			</nav>
-			<div class="clear"></div>
+			<div id="header">
+				<header><a href="index.html"><img src="/img/camellia.png" alt="" id="logo" /></a></header>
+				<nav>
+					<ul>
+						<li><a href="/index.html">Accueil</a></li>
+						<li><a href="/download.html">Téléchargement</a></li>
+						<li><a href="/install.html">Installation</a></li>
+						<li class="last current"><a href="/team.html">L'équipe</a></li>
+					</ul>
+				</nav>
+				<div class="clear"></div>
+			</div>
 			<section>
 				<article>
 					<table>
@@ -56,6 +58,6 @@
 				</article>
 			</section>
 		</div>
-		<footer>The Camellia Project est distribué sous license Apache 2.0</footer>
+		<footer>Le projet Camellia est distribué sous <a href="http://www.apache.org/licenses/LICENSE-2.0.html">license Apache 2.0</a></footer>
 	</body>
 </html>
