--- a/website/install.html
+++ b/website/install.html
@@ -30,19 +30,21 @@
 						Ensuite, déplacez-vous dans le dossier où se trouvent les sources, et éxecutez :<br/>
 					</p>
 					<div class="console">
-						tar -xjf faure_n-ocr-s1s1.tar.bz2<br/>
-						cd faure_n-ocr-s1s1<br/>
+						tar -xjf camellia-s2.tar.bz2<br/>
+						cd camellia-s2<br/>
 						make
 					</div>
-					<p>
-						<br/>Pour utiliser Camellia sur une image "image.png", il faut faire :<br/>
-					</p>
+					<p><br/>Pour utiliser Camellia sur une image "image.png", il faut faire :<br/></p>
 					<div class="console">
 						./camellia image.png
 					</div>
+					<p><br/>Sinon, vous pouvez simplement ouvrir Camellia et utiliser l'interface utilisateur, via la commande :<br/></p>
+					<div class="console">
+						./camellia
+					</div>
 				</article>
 			</section>
+			<footer>Le projet Camellia est distribué sous <a href="http://www.apache.org/licenses/LICENSE-2.0.html">license Apache 2.0</a></footer>
 		</div>
-		<footer>Le projet Camellia est distribué sous <a href="http://www.apache.org/licenses/LICENSE-2.0.html">license Apache 2.0</a></footer>
 	</body>
 </html>
