--- a/download.html
+++ b/download.html
@@ -22,12 +22,9 @@
 			<section>
 				<article>
 					<p>
-						<a href="/downloads/camellia-s1.tar.bz2" class="download">Soutenance 1</a>
-						<a href="/downloads/camellia-s2.tar.bz2" class="download">Soutenance 2</a>
+						<a href="https://github.com/Spark-NF/camellia/releases/download/s1/camellia-s1.tar.bz2" class="download">Soutenance 1</a>
+						<a href="https://github.com/Spark-NF/camellia/releases/download/s2/camellia-s2.tar.bz2" class="download">Soutenance 2</a>
 					</p>
-					<!--<div style="margin:60px auto 6px auto; width: 170px;"><img src="/img/rache.png" /></div>
-					<p>La <acronym title="Rapid Application Conception and Heuristic Extreme-programming">RACHE</acronym>, solution globale de génie logiciel, est un ensemble de techniques, de méthodes et de bonnes pratiques décrivant - des spécification à la maintenance - comment produire du logiciel dans des conditions <a href="http://www.risacher.com/la-rache/zfiles/unites.pdf">à peu près</a> satisfaisantes et approximativement optimales.</p>
-					<p class="details"><a href="http://www.risacher.com/la-rache/">Plus d'infos</a></p>-->
 				</article>
 			</section>
 			<footer>Le projet Camellia est distribué sous <a href="http://www.apache.org/licenses/LICENSE-2.0.html">license Apache 2.0</a></footer>
